--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Software Developer Portfolio Template built with react.js bootstrap that helps you showcase your work and skills as a software developer.",
 	"main": "index.js",
 	"repository": "https://github.com/1hanzla100/hanzla-portfolio.git",
-	"author": "Hanzla Tauqeer",
+	"author": "Mahmood Ahmed",
 	"license": "MIT",
 	"scripts": {
 		"dev": "next dev",
@@ -34,7 +34,8 @@
 		"react-scripts": "^4.0.3",
 		"react-typist": "^2.0.5",
 		"reactstrap": "^8.9.0",
-		"sharp": "^0.29.1"
+		"sharp": "^0.29.1",
+		"color-thief-react": "^2.1.0"
 	},
 	"devDependencies": {
 		"eslint": "7.32.0",
