--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "Portfolio",
-  "name": "Hanzla's Portfolio",
-  "description": "A passionate Full Stack Web Developer and Mobile App Developer.",
+  "name": "Mahmood's Portfolio",
+  "description": "A passionate Mobile Application Developer.",
     "icons": [
       {
         "src": "./favicon.png",
